2003-09-29  Adam Fedor  <fedor@gnu.org>

	* Simplify use of user-defined flags.
	* configure.ac: USE LDFLAGS not LIBS. Leave CPPFLAGS alone
	* common.make (INTERNAL_LDFLAGS): Don't add LDFLAGS
	* library-combo.make (SYSTEM_LDFLAGS): Add LDFLAGS.
	* config.make.in (CONFIG_SYSTEM_DEFS): Remove.

	* Documentation/faq.texi: Update answers.

2003-09-27  Adam Fedor  <fedor@gnu.org>

	* target.make (darwin/BUNDLE_LDFLAGS): Supress warnings
	* Documentation/machines.texi: Update darwin.

2003-09-26  Adam Fedor  <fedor@gnu.org>

	* Version 1.8.0 released on branch.

2003-09-25  Adam Fedor  <fedor@gnu.org>

	* target.make (darwin): Fix up bundle flags for GNU compiler.

2003-09-19  Leigh Smith  <leigh@leighsmith.com> 

        * library.make: Changed the full .inp declaration to $(DLL_DEF_INP). 

2003-09-15  Adam Fedor  <fedor@gnu.org>

	* Version: Add VERSION
	* gnustep-make.spec.in: Update packager.

Sun Sep  7 12:43:59 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* config.site: Fixed Headers directory, it is now in Library/.

Wed Sep  3 10:29:26 2003  Matt Rice <ratmice@yahoo.com>,
                          Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/library.make: Removed ADDITIONAL_INSTALL_DIRS code.
	* Instance/rules.make: Implemented support for
	ADDITIONAL_INSTALL_DIRS.
	* common.make (GNUSTEP_APPLICATION_SUPPORT): New variable.
	
2003-08-23  Adam Fedor  <fedor@gnu.org>

	* Version 1.7.3

2003-08-22  Adam Fedor  <fedor@gnu.org>

	* configure.ac: On netbsd, Use -Wl to pass linker options.

2003-08-05  Martin Brecher <martin@mb-itconsulting.com>
        * Documentation/openapp.1: New file.
        * Documentation/GNUstep.7: Updated. File is now unprocessed.

2003-08-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Instance/Documentation/autogsdoc.make: Rewrite dependency rules
	to avoid regeneration of documentation when we are going to clean.
	Also, use autogsdoc -Clean argument to get all files.

Wed Jul 30 09:52:16 2003  Nicola Pero  <n.pero@mi.flashnet.it>
